--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
+      <p>I am a software developer</p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>Minneapolis, MN</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>travel & learning</p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>I currently have my dream job</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>Dayton, MN & Austin, TX</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>So I can better manage others</p>
     </section>
 
     <footer id="footer">
