--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       <h1>Where do you live?</h1>
       <p>Dayton, MN & Austin, TX</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>So I can better manage others</p>
+      <p>So I can better manage others & fix or update changes quickly myself</p>
     </section>
 
     <footer id="footer">
